--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -1,9 +1,11 @@
 
 
-body{ background:#a5d2da; padding:0; color: #454545; font-family: "Myriad Pro";}
+body{ background:#a5d2da; padding:0; color: #454545;
+      font-family: 'Bubbler One', sans-serif;
+}
 a,a:hover{text-decoration:none; color:#FE5214}
 h2,h3{color:#FE5214; text-rendering: optimizelegibility; }
-h1{padding:0px; font-weight: 200;font-size: 32px;color: #3f3f3f;margin: 0;font-family: "Myriad Pro";text-rendering: optimizelegibility;}
+h1{padding:0px; font-weight: 200;font-size: 32px;color: #3f3f3f;margin: 0;text-rendering: optimizelegibility;}
 .debug{ border:1px solid #FFCC33;}
 h1.brand {
     background: none repeat scroll 0 0 #299A0B ;
@@ -28,7 +30,7 @@ h1.brand {
 .navbar{margin-bottom:-1px; margin-top:28px; position:relative }
 .navbar .nav, .navbar .nav > li{float:none; text-align:right; margin-left:25px;}
 .nav li{display:inline-block; float:none;}
-.nav a {padding: 3px 18px;font-size: 23px; display: inline-block; color:#3a494c; font-family: "Myriad Pro";}
+.nav a {padding: 3px 18px;font-size: 23px; display: inline-block; color:#3a494c;}
 
  #portfolioSection, #whatWeDo, #blogSection{padding:70px 0 ; }
 .txtR{text-align:right}
