--- a/css/style.css
+++ b/css/style.css
@@ -39,21 +39,45 @@ h1.brand {
 
 .clr{clear:both}
 .cntr{text-align:center}
+/*
 .navbar{margin-bottom:-1px; margin-top:28px; position:relative }
 .navbar .nav, .navbar .nav > li{float:none; text-align:right; margin-left:25px;}
 .nav li{display:inline-block; float:none;}
 .nav a {padding: 3px 18px;font-size: 23px; display: inline-block; color:#3a494c;}
-
+*/
 #studio-cosplay-logo {
-    max-width: 300px;
+    max-height: 80px;
+}
+@media (max-width: 524px) {
+    #studio-cosplay-logo {
+        max-height: auto;
+        max-width: 300px;
+        padding-top: 20px;
+    }
+}
+.navbar .nav > li > a:hover {
+color: #a8d5dd;
+text-decoration: none;
+background-color: #3a494c;
+border-radius: 8px;
+}
+.navbar-brand, button.navbar-toggle, .navbar-nav li a {
+    line-height: 80px;
+    height: 80px;
+    padding-top: 0;
+}
+div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
+/*    min-height: 70px;
+*/
+    background-color: #a5d2da;
 }
 /* Override Bootstrap 3 */
-
+/*
 .navbar-collapse.collapse { display: block!important; }
 .navbar-nav>li, .navbar-nav { float: left !important; }
 .navbar-nav.navbar-right:last-child { margin-right: -15px !important; }
 .navbar-right { float: right!important; }
-
+*/
 
 /* Carousel base class */
 .carousel {
