--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,12 @@ h1.brand {
 .nav a {padding: 3px 18px;font-size: 23px; display: inline-block; color:#3a494c;}
 */
 #studio-cosplay-logo {
+/*
     max-height: 80px;
+*/
+    max-height: 30px;
 }
-@media (max-width: 524px) {
+@media (max-width: 500px) {
     #studio-cosplay-logo {
         max-height: auto;
         max-width: 300px;
@@ -56,16 +59,18 @@ h1.brand {
     }
 }
 .navbar .nav > li > a:hover {
-color: #a8d5dd;
-text-decoration: none;
-background-color: #3a494c;
-border-radius: 8px;
+    color: #a8d5dd;
+    text-decoration: none;
+    background-color: #3a494c;
+    border-radius: 8px;
 }
+/*
 .navbar-brand, button.navbar-toggle, .navbar-nav li a {
     line-height: 80px;
     height: 80px;
     padding-top: 0;
 }
+*/
 div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
 /*    min-height: 70px;
 */
@@ -80,10 +85,12 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
 */
 
 /* Carousel base class */
+/*
 .carousel {
   height: 500px;
   margin-bottom: 60px;
 }
+*/
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
@@ -106,11 +113,28 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
   background-image: none;
 }
 
-#portfolioSection, #whatWeDo, #blogSection{padding:70px 0 ; }
+/* Vertical Carousel for the profile svgs */
+/*
+.vertical .carousel-inner { height: 100%; }
+.carousel.vertical .item {
+  -webkit-transition: 0.6s ease-in-out top;
+     -moz-transition: 0.6s ease-in-out top;
+      -ms-transition: 0.6s ease-in-out top;
+       -o-transition: 0.6s ease-in-out top;
+          transition: 0.6s ease-in-out top;
+}
+.carousel.vertical .active { top: 0; }
+.carousel.vertical .next { top: 100%; }
+.carousel.vertical .prev { top: -100%; }
+.carousel.vertical .next.left, .carousel.vertical .prev.right { top: 0; }
+.carousel.vertical .active.left { top: -100%; }
+.carousel.vertical .active.right { top: 100%; }
+*/
+#portfolioSection, #ourMission, #blogSection{padding:70px 0 ; }
 
-#whatWeDo{background: #fff;text-align: center;border-top: 1px solid #ddd;}
-#whatWeDo h4 { margin:25px 0; }
-#whatWeDo p { color: #5E5E5E; font-size: 19px; line-height: 27px; }
+#ourMission {background: #fff;text-align: center;border-top: 1px solid #ddd;}
+#ourMission h4 { margin:25px 0; }
+#ourMission p { color: #5E5E5E; font-size: 19px; line-height: 27px; }
 
 #portfolioSection{background: #99d4a5;text-align: center;}
 #portfolioSection h1{ text-transform:uppercase; color:#fff; padding:0;font-size:60px;}
@@ -191,20 +215,33 @@ a.icon2{ height:56px; width:56px; background:url(../img/email_F.png) no-repeat c
     border-radius: 10px;
 }
 .profile {
-/*
-    height: 268px;
-*/
     width:  336px;
 }
 #contact-us-form {
     color: #fff;
 }
 
-/*     break points 
-@media (max-width: 800px) {
+/* tablet break point */
+@media (max-width: 769px) {
     #studio-cosplay-logo {
-        max-width: 600px;
-        width: 600px;
+/*
+        max-height: auto;
+        max-width: 300px;
+        padding-top: 20px;
+*/
+        max-height: 30px;
     }
 }
-*/
+/* iphone and up */
+@media (max-width: 360px) {
+    #studio-cosplay-logo {
+        max-height: auto;
+        max-width: 230px;
+        padding-top: 15px;
+    }
+    .navbar-brand, button.navbar-toggle, .navbar-nav li a {
+        line-height: 50px;
+        height: 50px;
+        padding-top: 0;
+    }
+}
