--- a/css/style.css
+++ b/css/style.css
@@ -94,31 +94,14 @@ a.pin{ height:56px; width:56px; background:url(../img/pinterest_F.png) no-repeat
 a.html5{ height:56px; width:56px; background:url(../img/instagram_F.png) no-repeat center center;display:inline-block;}
 a.icon2{ height:56px; width:56px; background:url(../img/email_F.png) no-repeat center center;display:inline-block;}
 
-
-.go-top {
-    display: inline-block;
-    position: fixed;
-    bottom: 8px;
-    right: 30px;
-    color: #999;
-    text-decoration: none;
-    font-size: 30px;
-    line-height: 34px;
-}
-.go-top:hover {
-    color: #fff;
-    text-decoration: none;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-}
-
-
 /* Studio Cosplay */
 
 /* fit logo to navbar */
+.navbar-brand {
+    padding: 7px 15px;
+}
 #studio-cosplay-logo {
-    max-height: 30px;
+    max-height: 41px;
 }
 .navbar .nav > li > a:hover {
     color: #a8d5dd;
@@ -126,16 +109,7 @@ a.icon2{ height:56px; width:56px; background:url(../img/email_F.png) no-repeat c
     background-color: #3a494c;
     border-radius: 8px;
 }
-/*
-.navbar-brand, button.navbar-toggle, .navbar-nav li a {
-    line-height: 80px;
-    height: 80px;
-    padding-top: 0;
-}
-*/
 div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
-/*    min-height: 70px;
-*/
     background-color: #a5d2da;
 }
 .profile {
@@ -147,25 +121,14 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
     margin: auto;
 }
 
-/* tablet break point */
-@media (max-width: 769px) {
-    #studio-cosplay-logo {
-        max-height: 30px;
-    }
-}
-
-@media (max-width: 500px) {
-    #studio-cosplay-logo {
-        max-height: auto;
-        max-width: 300px;
-        padding-top: 20px;
-    }
-}
 /* iphone and up */
 @media (max-width: 360px) {
-    #studio-cosplay-logo {
-        max-height: auto;
-        max-width: 230px;
-        padding-top: 15px;
+    ol.carousel-indicators {
+        bottom: -10px;
+    }
+    #studioCosplay {padding: 10px 0; }
+    
+    .socialicon a {
+        margin-right: 10px;
     }
 }
