--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
     max-width: 600px;
     margin: auto;
 }
-/* v2.1.1 */
+/* v2.1.2 */
 .carousel-inner .active .overflow-active {
     max-height: 320px;
     overflow: hidden;
@@ -132,6 +132,9 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
     opacity: 0.35;
     filter: alpha(opacity=35); /* For IE8 and earlier */
 }
+.carousel-caption p {
+    font-size: 19px;
+}
 
 /* iphone and up */
 @media (max-width: 360px) {
@@ -142,5 +145,9 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
     
     .socialicon a {
         margin-right: 10px;
+    }
+    /* 2.1.2 */
+    .carousel-caption p {
+        font-size: 15px;
     }
 }
