--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1{padding:0px; font-weight: 200;font-size: 32px;color: #3f3f3f;margin: 0;text-r
 #studioCosplay p, #blogSection p { color: #5E5E5E; font-size: 19px; line-height: 27px; }
 
 #ourMission {background: #99d4a5;text-align: center;}
-#ourMission h1{ text-transform:uppercase; color:#fff; padding:0;font-size:60px;}
+#ourMission h1{ text-transform:uppercase; color:#fff; padding:0;font-size:32px;}
 #ourMission h2{ color:#000; }
 #ourMission p { color: #fff; font-size: 19px; line-height: 27px; margin: 15px 0; }
 #ourMission .span6, #contactUs .span6{ float:none; margin:0 auto; text-align:center;}
@@ -120,12 +120,16 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
     max-width: 600px;
     margin: auto;
 }
-/* v2.1.2 */
+/* v2.1.2, v2.1.3 */
+.carousel-inner img {
+    min-height: 320px;
+    min-width: 100%;
+}
 .carousel-inner .active .overflow-active {
     max-height: 320px;
     overflow: hidden;
 }
-.carousel-inner .active img {
+.carousel-inner img {
     min-height: 320px;
     min-width: 100%;
     height: auto;
@@ -134,6 +138,14 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
 }
 .carousel-caption p {
     font-size: 19px;
+}
+#fb-iframe {
+    width: 100px;
+    border: none;
+    height: 24px;
+}
+#studioCosplay .intro, #blogSection .intro {
+    font-size: 25px;
 }
 
 /* iphone and up */
