--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,13 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
     font-size: 25px;
 }
 
+/* v2.1.4 */
+#mailing-list-form {
+    border: 2px solid #357ebd;
+    border-radius: 4px;
+    padding: 2%;
+}
+
 /* iphone and up */
 @media (max-width: 360px) {
     ol.carousel-indicators {
