new profile pics (except daria-norm) with 70% width in mobile, removed top margin on profiles added the new .svg carousel background images
TODO:
- add daria normal svg profile pic
- condense css
- vertical position carousel text

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ div.navbar, div.container-fluid, div.navbar-header, div.navbar-collaspe {
     background-color: #a5d2da;
 }
 .profile {
-    width:  336px;
+    width:  70%;
 }
 #contact-us-form {
     color: #fff;
