Completed CosNews first draft and Story page templates

--- a/themes/studiocosplay/style.css
+++ b/themes/studiocosplay/style.css
@@ -16,3 +16,6 @@ Text Domain: studiocosplay
 
 /**** Modified Colorful Flat ****/
 @import url("css/style.css");
+
+/**** Pinterest Styled Cards ****/
+@import url("css/cards.css");
