--- a/themes/studiocosplay/css/cards.css
+++ b/themes/studiocosplay/css/cards.css
@@ -1,35 +1,9 @@
-/*
-#wrapper {
-    width: 90%;
-    max-width: 1100px;
-    min-width: 800px;
-    margin: 50px auto;
-}
-
-#columns {
-    -webkit-column-count: 3;
-    -webkit-column-gap: 10px;
-    -webkit-column-fill: auto;
-    -moz-column-count: 3;
-    -moz-column-gap: 10px;
-    -moz-column-fill: auto;
-    column-count: 3;
-    column-gap: 15px;
-    column-fill: auto;
-}
-*/
-
 .pin {
     display: inline-block;
     background: #FEFEFE;
     border: 2px solid #FAFAFA;
     box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-/*
-    margin: 0 2px 15px;
-    -webkit-column-break-inside: avoid;
-    -moz-column-break-inside: avoid;
-    column-break-inside: avoid;
-*/
+
     padding: 15px;
     padding-bottom: 5px;
     background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
@@ -54,23 +28,6 @@
     margin: 0;
 }
 
-/*
-@media (min-width: 960px) {
-    #columns {
-        -webkit-column-count: 4;
-        -moz-column-count: 4;
-        column-count: 4;
-    }
-}
-
-@media (min-width: 1100px) {
-    #columns {
-        -webkit-column-count: 5;
-        -moz-column-count: 5;
-        column-count: 5;
-    }
-}
-*/
-/*#columns:hover*/ .pin:not(:hover) {
-    opacity: 0.4;
+.pin:not(:hover) {
+    opacity: 0.9;
 }
