--- a/themes/studiocosplay/css/cards.css
+++ b/themes/studiocosplay/css/cards.css
@@ -22,7 +22,7 @@
     margin-bottom: 5px;
 }
 
-.pin p {
+.pin p, #meetOurTeam .pin p {
     font: 12px/18px Arial, sans-serif;
     color: #333;
     margin: 0;
