--- a/themes/studiocosplay/css/cards.css
+++ b/themes/studiocosplay/css/cards.css
@@ -4,6 +4,8 @@
     border: 2px solid #FAFAFA;
     box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
 
+    width: 32.5%;
+    margin: 0 0.4%;
     padding: 15px;
     padding-bottom: 5px;
     background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
@@ -17,6 +19,7 @@
 
 .pin img {
     width: 100%;
+    height: 100%;
     border-bottom: 1px solid #ccc;
     padding-bottom: 15px;
     margin-bottom: 5px;
@@ -30,4 +33,12 @@
 
 .pin:not(:hover) {
     opacity: 0.9;
+}
+
+.pin h4 a {
+    color: #366893;
+}
+
+.pin a, .pin a:hover {
+    color: #f00;
 }
