--- a/themes/studiocosplay/css/cards.css
+++ b/themes/studiocosplay/css/cards.css
@@ -4,8 +4,10 @@
     border: 2px solid #FAFAFA;
     box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
 
+/*
     width: 32.5%;
-    margin: 0 0.4%;
+*/
+    margin: 0.4% 0.4%;
     padding: 15px;
     padding-bottom: 5px;
     background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
@@ -15,6 +17,9 @@
     -moz-transition: all .2s ease;
     -o-transition: all .2s ease;
     transition: all .2s ease;
+}
+@media (min-width: 769px) {
+    .pin { width: 32.5% }
 }
 
 .pin img {
